--- a/index.html
+++ b/index.html
@@ -5,13 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.cdnfonts.com/css/ocr-a-std" rel="stylesheet">
     <title>Mon Portfolio</title>
 </head>
 <body>
-    <header>
-        <p>Bonjour, je m'appelle</p>
-        <h1 id="name">Alexandre Oualid.</h1>
-        <h1 id="desc">Je suis étudiant à Epitech à la recherche d'une alternance</h1>
-    </header>
+        <div class="contact">
+            <a href="img/CV de Alexandre OUALID.pdf" target="_blank"><button class="button">Mon CV</button></a>
+        </div>
+        <div class="presentation">
+            <p class="bluegreen font-ocr">Bonjour, je m'appelle</p>
+            <h1 id="name">Alexandre Oualid.</h1>
+            <h1 class="gray-transparent">Je construis des choses pour le web.</h1>
+            <p class="gray-transparent font-ocr">Je suis développeur web à la <span class="bluegreen">web@academie</span>, sérieux et autonome, toujours curieux de nouvelles <span class="bluegreen">technologies</span>, je saurai répondre aux besoins du client et de l'entreprise.</p>
+        </div>
+
+        <div class="diplomes">
+            <p class="gray-transparent">Formation : <span class="bluegreen font-ocr">Web@cademie</span> </p>
+            <p class="bluegreen font-ocr">Bac +2</p>
+            <p class="bluegreen font-ocr">HTML CSS</p>
+            <p class="bluegreen font-ocr">PHP | JAVASCRIPT</p>
+            <p class="bluegreen font-ocr">REACT</p>
+            <p class="bluegreen font-ocr">Symfony | Laravel</p>
+        </div>
+        <br>
+        <div class="project">
+            <h3 class="bluegreen font-ocr">Puissance 4 :</h3>
+            <p class="font-ocr gray-transparent">2 semaines de projet pour créer un jeu puissance 4 en javascript avec un système de points et une petite touche perso, le projet a commencé en parallèle avec le projet Twitter de 1 mois</p>
+            <div class="container text-center">
+                <button class="button">Voir</button>
+            </div>
+        </div>
+
 </body>
 </html>
