--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
         </div>
         <br>
-        <div class="project" data-aos="fade-up" data-aos-delay="300">
+        <!-- <div class="project" data-aos="fade-up" data-aos-delay="300">
             <h3 class="bluegreen font-ocr">Twitter Academie :</h3>
             <p class="font-ocr gray-transparent">Projet en groupe de 4 consistant à reproduire twitter et ses
                 fonctionnalités en créant une database commune à toute la classe (40 personnes) sur une durée de 1 mois.
@@ -101,7 +101,7 @@
             <div class="container text-center">
                 <button class="button">Voir</button>
             </div>
-        </div>
+        </div> -->
         <br>
         <div class="project" data-aos="fade-up" data-aos-delay="300">
             <h3 class="bluegreen font-ocr">Puissance 4 :</h3>
@@ -134,7 +134,7 @@
             </div>
         </div>
         <br>
-        <div class="project" data-aos="fade-up" data-aos-delay="300">
+        <!-- <div class="project" data-aos="fade-up" data-aos-delay="300">
             <h3 class="bluegreen font-ocr">Quizz :</h3>
             <p class="font-ocr gray-transparent">Découverte de Symfony dans un projet de 1 semaine en groupe de 3
                 consistant
@@ -142,7 +142,7 @@
             <div class="container text-center">
                 <button class="button">Voir</button>
             </div>
-        </div>
+        </div> -->
     </div>
     <script src="script.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
