--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="contact">
         <div class="cv-email">
-            <a href="img/CV de Alexandre OUALID.pdf" rel="noopener noreferrer" download><button class="button">Mon
+            <a href="img/Alexandre Oualid.pdf" rel="noopener noreferrer" download><button class="button">Mon
                     CV</button></a>
             <a href="mailto:alexandre.oualid@laposte.net" class="bluegreen">alexandre.oualid@laposte.net</a>
         </div>
