--- a/index.html
+++ b/index.html
@@ -52,6 +52,18 @@
     <div class="container-fluid">
 
         <div class="project" data-aos="fade-up" data-aos-delay="300">
+            <h3 class="bluegreen font-ocr">Morpion :</h3>
+            <p class="font-ocr gray-transparent">Un jeu de morpion que j'ai développé. Essayez de battre l'ordinateur!</p>
+            <div class="container text-center">
+                <button class="button" data-target="morpion">Jouer</button>
+            </div>
+            <div class="screen">
+                <iframe id="morpion" src="https://alexandreo1.github.io/morpion/" frameborder="0"
+                    style="max-width: 98%; margin: 1%; display: none;"></iframe>
+            </div>
+        </div>        
+        <br>
+        <div class="project" data-aos="fade-up" data-aos-delay="300">
             <h3 class="bluegreen font-ocr">My Cinema :</h3>
             <p class="font-ocr gray-transparent">Découverte de l'utilisation de PHP avec MySQL avec une database déjà
                 créée. J'ai dû reproduire les fonctionnalités d'une page d'accueil de site de cinéma.</p>
