correction de bugs morpion

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div class="screen">
                 <iframe id="morpion" src="https://alexandreo1.github.io/morpion/" frameborder="0"
-                    style="max-width: 98%; margin: 1%; display: none;"></iframe>
+                    style="max-width: 98%; height: 400px; margin: 1%; display: none;"></iframe>
             </div>
         </div>        
         <br>
