--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
 
         <div class="project" data-aos="fade-up" data-aos-delay="300">
             <h3 class="bluegreen font-ocr">Morpion :</h3>
-            <p class="font-ocr gray-transparent">Un jeu de morpion que j'ai développé. Amusez-vous !</p>
+            <p class="font-ocr gray-transparent">Un jeu de morpion que j'ai développé. Essayez de battre l'ordinateur!</p>
             <div class="container text-center">
                 <button class="button" data-target="morpion">Jouer</button>
             </div>
             <div class="screen">
                 <iframe id="morpion" src="https://alexandreo1.github.io/morpion/" frameborder="0"
-                    style="max-width: 98%; height: 400px; margin: 1%; display: none;"></iframe>
+                    style="max-width: 98%; margin: 1%; display: none;"></iframe>
             </div>
-        </div>        
+        </div>              
         <br>
         <div class="project" data-aos="fade-up" data-aos-delay="300">
             <h3 class="bluegreen font-ocr">My Cinema :</h3>
