correct src for 2 img

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <button class="button" data-target="mycinema">Voir</button>
             </div>
             <div class="screen">
-                <img id="mycinema" src="/img/mycinema screen.png" alt="Screen de mon projet my cinema"
+                <img id="mycinema" src="https://media.discordapp.net/attachments/1057407967764422807/1148530551242895360/mycinema_screen.png?width=1215&height=565" alt="Screen de mon projet my cinema"
                     style="max-width: 98%; margin: 1%; display: none;">
             </div>
         </div>
@@ -86,7 +86,7 @@
                 <button class="button" data-target="mymeetic">Voir</button>
             </div>
             <div class="screen">
-                <img id="mymeetic" src="/img/mymeetic screen.png" alt="Screen de mon projet MyMeetic"
+                <img id="mymeetic" src="https://media.discordapp.net/attachments/1057407967764422807/1148530551758786591/mymeetic_screen.png?width=1215&height=563" alt="Screen de mon projet MyMeetic"
                     style="max-width: 98%; margin: 1%; display: none;">
             </div>
         </div>
