add playable power4

--- a/index.html
+++ b/index.html
@@ -77,6 +77,22 @@
         </div>
         <br>
         <div class="project" data-aos="fade-up" data-aos-delay="300">
+            <h3 class="bluegreen font-ocr">Puissance 4 :</h3>
+            <p class="font-ocr gray-transparent">2 semaines de projet pour créer un jeu puissance 4 en javascript avec
+                un
+                système de points et une petite touche perso, le projet a commencé en parallèle avec le projet Twitter
+                de 1
+                mois</p>
+            <div class="container text-center">
+                <button class="button" data-target="puissance4">Jouer</button>
+            </div>
+            <div class="screen">
+                <iframe id="puissance4" src="https://alexandreo1.github.io/puissance4/" frameborder="0"
+                    style="width: 98%; height: 600px; margin: 1%; display: none;"></iframe>
+            </div>
+        </div>
+        <br>
+        <div class="project" data-aos="fade-up" data-aos-delay="300">
             <h3 class="bluegreen font-ocr">My Meetic :</h3>
             <p class="font-ocr gray-transparent">Projet de 2 semaines pour reproduire les fonctionnalités d'un site de
                 rencontre en s'inspirant légèrement de meetic en utilisant PHP avec MySQL avec cette fois une database
@@ -114,22 +130,6 @@
                 <button class="button">Voir</button>
             </div>
         </div> -->
-        <br>
-        <div class="project" data-aos="fade-up" data-aos-delay="300">
-            <h3 class="bluegreen font-ocr">Puissance 4 :</h3>
-            <p class="font-ocr gray-transparent">2 semaines de projet pour créer un jeu puissance 4 en javascript avec
-                un
-                système de points et une petite touche perso, le projet a commencé en parallèle avec le projet Twitter
-                de 1
-                mois</p>
-            <div class="container text-center">
-                <button class="button" data-target="puissance4">Voir</button>
-            </div>
-            <div class="screen">
-                <img id="puissance4" src="img/puissance4 screen.png" alt="Screen de mon projet Puissance4"
-                    style="max-width: 98%; margin: 1%; display: none;">
-            </div>
-        </div>
         <br>
         <div class="project" data-aos="fade-up" data-aos-delay="300">
             <h3 class="bluegreen font-ocr">Battleship :</h3>
